@@ -1,3 +1,9 @@
+Tue Jul 31 08:34:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/indexerconnection_doctest2.txt,secore/searchconnection.py,
+	  secore/searchconnection_doctest3.txt: Improve test coverage - in
+	  particular, add tests of various conditions which cause errors.
+
 Mon Jul 30 16:10:52 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/datastructures.py,secore/datastructures_doctest1.txt:
